# baa

./: .clang-format  CMakeLists.txt  default.nix  flake.nix  shell.nix
benchmarks/: CMakeLists.txt  bench_arena.cpp  bench_bump_allocator.cpp
cmake/: baaConfig.cmake.in
include/baa/: Arena.hpp  ArenaAllocator.hpp  ArenaCheckpoint.hpp  ArenaMarker.hpp  Bump.hpp  BumpAllocator.hpp  BumpCheckpoint.hpp  BumpMark.hpp  BumpMarker.hpp  FixedArena.hpp  FixedArenaAllocator.hpp  FixedArenaCheckpoint.hpp  FixedArenaMark.hpp  FixedArenaMarker.hpp
tests/: ArenaTest.cpp  BumpAllocatorTest.cpp  BumpStorageTest.cpp  CMakeLists.txt  FixedArenaTest.cpp
